--- a/style.css
+++ b/style.css
@@ -73,15 +73,17 @@ hr{
 
 /* ---------------- Mobile (≤640px) ---------------- */
 @media (max-width: 640px) {
-    body
+    
     header{
         padding: 72px 0;
     }
     main{
         padding: 72px 12px;
+        
+
     }
     .faq-container{
-        
+        width: auto;
         padding: 0 24px;
     
 }
