--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*=============== Reset Style ===============*/
 *{
     margin: 0;
     padding: 0;
@@ -7,34 +8,47 @@
 body{
     height: 100vh;
     width: 100%;
-    font-family: "Inter", sans-serif;
-
+    font-family: "Inter", sans-serif;   /* Google font */
 }
 
-/* Typography */
 
+/*=============== Global text color ===============*/
+h1,
+h2,
+p,
+strong {
+  color: #030616; 
+}
+
+/*=============== Typography ===============*/
 h1{
     font-size: 2.25rem;
     font-weight: 600;
     margin-bottom: 16px;
-
 }
+
 h2{
     font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: 32px;
 }
+
 p, 
 li{
 font-size: 1rem;
 font-weight: 400;
 }
 
+
+/*=============== Layout ===============*/
 header{
     padding: 72px 24px;
-    text-align: center;
-
 }
+
+.faq-header{
+    text-align: center; 
+}
+
 main{
  padding: 72px 24px;
  background-color: #F8FAFC ;
@@ -45,33 +59,38 @@ main{
     margin: 0 auto;
 }
 
-ol, ul{
+
+/*=============== list ===============*/
+ol, 
+ul{
     margin: 24px 0;
-    padding-left: 16px;
-}
-li{
-    line-height: 32px;
+    padding-left: 16px; /* Indent list items */
 }
 
+li{
+    line-height: 32px; 
+}
+
+
+/*=============== links ===============*/
+a {
+  text-decoration: none; /* Remove underline */
+  color: #4e80ee;        /* Blue color for links */
+}
+
+
+/*=============== Divider ===============*/
 hr{
     margin: 40px 0;
 }
+
 
 
 /* ===========================
         Responsive Design
 =============================== */
 
-
-
-/* ---------------- Tablet (641px – 1024px) ---------------- */
-@media (min-width: 641px) and (max-width: 1024px) {
-  
-  
-}
-
-
-/* ---------------- Mobile (≤640px) ---------------- */
+/*=============== Mobile (≤640px) ===============*/
 @media (max-width: 640px) {
     
     header{
@@ -80,7 +99,6 @@ hr{
     main{
         padding: 72px 12px;
         
-
     }
     .faq-container{
         width: auto;
